fix pre-existing alignment issue for Add Search Field on PC-605

--- a/vufind/themes/msul/less/custom.less
+++ b/vufind/themes/msul/less/custom.less
@@ -1290,6 +1290,10 @@ body.template-dir-myresearch.template-name-profile {
   max-width:80%;
   float:left;
 }
+.add_search_link {
+  margin-top:0 !important;
+  padding-top:0;
+}
 
 @media (min-width: 768px) {
   .eds-adv {
